# LEXAR

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_PHASE4.md  EVIDENCE_CONSTRAINED_ATTENTION.md  EVIDENCE_CONSTRAINED_INTEGRATION.md  EVIDENCE_DEBUG_MODE.md  EVIDENCE_SUFFICIENCY_GATING.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_REVIEW.md  LEXAR_HARDENING_PROJECT_COMPLETION.md  LEXAR_HARDENING_PROJECT_SUMMARY.md  LICENSE  MANIFEST.in  PHASE2_CHECKLIST.md  PHASE2_DELIVERY_SUMMARY.md  PHASE2_VISUAL_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_FINAL_STATUS.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_CONTEXT.md  PUBLISHING.md  QUERY_ENCODER_TRAINING_RESULTS.md  QUICK_REFERENCE.md  QUICK_START_EVIDENCE_GATING.md  QUICK_START_GUIDE.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.1.0.md  START_HERE.md  STATUS_REPORT.md  STEP2_COMPLETION_SUMMARY.md  VERIFICATION_CHECKLIST.md  pyproject.toml  test_import.py  training_output.txt
backend/: requirements.txt
backend/app/services/: lexar_pipeline.py
backend/app/services/chunking/: statute_chunker.py
backend/app/services/generation/: debug_mode.py  decoder.py  evidence_gating.py  lexar_generator.py  token_provenance.py
backend/app/services/retrieval/: ipc_retriever.py
data/faiss_index/: ipc.index  ipc_chunk_ids.json  ipc_crpc.index  ipc_crpc_chunk_ids.json  ipc_crpc_iea_chunk_ids.json  lexar_medium.index
data/models/lexar_query_encoder_v1/: config_sentence_transformers.json
lexar/: __init__.py  __version__.py  cli.py  ingestion.py  lexar_pipeline.py
lexar/citation/: citation_renderer.py
lexar/generation/: attention_mask.py  lexar_generator.py  token_provenance.py
lexar/ingestion/: ipc_ingestor.py  judgment_ingestor.py  user_ingestor.py
lexar/retrieval/: embedder.py  ipc_retriever.py  multi_index_retriever.py
scripts/: build_ipc_crpc_faiss_index.py  build_ipc_crpc_iea_faiss_index.py  build_ipc_faiss_index.py  build_lexar_medium_index.py  ingest_india_statutes.py  run_ipc_e2e_demo.py  test_attention_hardening.py  test_citation_renderer.py  test_debug_mode.py  test_evidence_constrained_attention.py  test_evidence_gating.py  test_finetuned_retrieval.py  test_multi_retrievar.py  test_retrieval_validation.py  test_statute_chunker.py  test_token_provenance.py  train_query_encoder_contrastive.py  train_query_encoder_ipc_crpc_iea.py  train_query_encoder_v2.py
